# wordsearch

./: .gitignore  Makefile  README.md  pyproject.toml  tox.ini
.github/workflows/: main.yml
examples/: README.md  create_board_from_wikipedia.py  place_and_discover.py  requirements.txt
src/wordsearch/: __init__.py  wordsearch.py
tests/: __init__.py  utils.py  wordsearch.py
